<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgDracula"
    android:orientation="vertical"
    tools:context=".MainActivity">
    
    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/grayDracula"
        android:elevation="50dp"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        />

    <EditText
        android:id="@+id/edit_total_km"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/distancia"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/greenDracula"
        android:textColorHint="@color/grayDracula"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/secondaryDracula"
        android:text="@string/total_de_quilometros"
        />

    <EditText
        android:id="@+id/edit_preco_litro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="16dp"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:hint="@string/preco"
        android:backgroundTint="@color/greenDracula"
        android:textColorHint="@color/grayDracula"
         />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preco_por_litro"
        android:textColor="@color/secondaryDracula"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/edit_autonomia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="16dp"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:hint="@string/autonomia"
        android:backgroundTint="@color/greenDracula"
        android:textColorHint="@color/grayDracula"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kms_por_litro"
        android:textColor="@color/secondaryDracula"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gasto_total"
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/final_value"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textColor="@color/greenDracula" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_calcular"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/calcular"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/square_button"
        />

</LinearLayout>